[project]
name = "ps01-support-agent"
version = "0.1.0"
description = "A2A Translator agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk[http-server]>=0.3.0",
    "click>=8.1.8",
    "openai>=1.57.0", 
    "pydantic>=2.11.4"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"